// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> disabled rendering is rendering correctly when currencies are equal 1`] = `
.c1 {
  border-color: transparent;
  background-color: transparent;
  color: #f3f6ff;
  -webkit-tap-highlight-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition: color 0.1s ease 0s;
  transition: color 0.1s ease 0s;
}

.c1:active {
  color: #5591f7;
}

.c1:disabled {
  cursor: unset;
}

.c1:hover {
  color: #5591f7;
}

.c2 {
  border-color: transparent;
  background-color: transparent;
  color: #5591f7;
  -webkit-tap-highlight-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition: color 0.1s ease 0s;
  transition: color 0.1s ease 0s;
}

.c2:active {
  color: #5591f7;
}

.c2:disabled {
  cursor: unset;
}

.c2:hover {
  color: #5591f7;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 1rem;
  height: 2rem;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="c2"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Exchange
  </button>
</div>
`;

exports[`<Header /> disabled rendering is rendering correctly when no exchange amount is typed 1`] = `
.c1 {
  border-color: transparent;
  background-color: transparent;
  color: #f3f6ff;
  -webkit-tap-highlight-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition: color 0.1s ease 0s;
  transition: color 0.1s ease 0s;
}

.c1:active {
  color: #5591f7;
}

.c1:disabled {
  cursor: unset;
}

.c1:hover {
  color: #5591f7;
}

.c2 {
  border-color: transparent;
  background-color: transparent;
  color: #5591f7;
  -webkit-tap-highlight-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition: color 0.1s ease 0s;
  transition: color 0.1s ease 0s;
}

.c2:active {
  color: #5591f7;
}

.c2:disabled {
  cursor: unset;
}

.c2:hover {
  color: #5591f7;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 1rem;
  height: 2rem;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="c2"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Exchange
  </button>
</div>
`;

exports[`<Header /> rendering is rendered correctly by default 1`] = `
.c1 {
  border-color: transparent;
  background-color: transparent;
  color: #f3f6ff;
  -webkit-tap-highlight-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  -webkit-transition: color 0.1s ease 0s;
  transition: color 0.1s ease 0s;
}

.c1:active {
  color: #5591f7;
}

.c1:disabled {
  cursor: unset;
}

.c1:hover {
  color: #5591f7;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 1rem;
  height: 2rem;
}

<div
  className="c0"
>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
  <button
    className="c1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Exchange
  </button>
</div>
`;
